// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formulář při načítání 1`] = `
<div
  className="SignIn_div"
>
  <Panel
    bsClass="panel"
    bsStyle="primary"
    className="SignIn_panel"
    defaultExpanded={false}
    header="Přihlášení do aplikace JCM"
  >
    <Form
      autoComplete="off"
      bsClass="form"
      className="SignIn_form"
      componentClass="form"
      horizontal={false}
      inline={true}
      onSubmit={[Function]}
    >
      <FormGroup
        bsClass="form-group"
        controlId="username"
      >
        <ControlLabel
          bsClass="control-label"
          srOnly={false}
        >
          Jméno
        </ControlLabel>
         
        <FormControl
          bsClass="form-control"
          componentClass="input"
          onChange={[Function]}
          placeholder="uživatelské jméno"
          type="text"
          value=""
        />
      </FormGroup>
      <span
        className="SignIn_spacing"
      />
      <FormGroup
        bsClass="form-group"
        controlId="password"
      >
        <ControlLabel
          bsClass="control-label"
          srOnly={false}
        >
          Heslo
        </ControlLabel>
         
        <FormControl
          bsClass="form-control"
          componentClass="input"
          onChange={[Function]}
          placeholder="heslo"
          type="password"
          value=""
        />
      </FormGroup>
      <span
        className="SignIn_spacing"
      />
      <FormGroup
        bsClass="form-group"
      >
        <LoadingButton
          bsStyle="success"
          loading={true}
          loadingText="Probíhá přihlašování..."
          type="submit"
        >
          Přihlásit
        </LoadingButton>
      </FormGroup>
    </Form>
  </Panel>
  <Connect(ErrorInModal)
    title="Chyba při přihlášení!"
  />
</div>
`;

exports[`prázdný formulář 1`] = `
<div
  className="SignIn_div"
>
  <Panel
    bsClass="panel"
    bsStyle="primary"
    className="SignIn_panel"
    defaultExpanded={false}
    header="Přihlášení do aplikace JCM"
  >
    <Form
      autoComplete="off"
      bsClass="form"
      className="SignIn_form"
      componentClass="form"
      horizontal={false}
      inline={true}
      onSubmit={[Function]}
    >
      <FormGroup
        bsClass="form-group"
        controlId="username"
      >
        <ControlLabel
          bsClass="control-label"
          srOnly={false}
        >
          Jméno
        </ControlLabel>
         
        <FormControl
          bsClass="form-control"
          componentClass="input"
          onChange={[Function]}
          placeholder="uživatelské jméno"
          type="text"
          value=""
        />
      </FormGroup>
      <span
        className="SignIn_spacing"
      />
      <FormGroup
        bsClass="form-group"
        controlId="password"
      >
        <ControlLabel
          bsClass="control-label"
          srOnly={false}
        >
          Heslo
        </ControlLabel>
         
        <FormControl
          bsClass="form-control"
          componentClass="input"
          onChange={[Function]}
          placeholder="heslo"
          type="password"
          value=""
        />
      </FormGroup>
      <span
        className="SignIn_spacing"
      />
      <FormGroup
        bsClass="form-group"
      >
        <LoadingButton
          bsStyle="success"
          loading={false}
          loadingText="Probíhá přihlašování..."
          type="submit"
        >
          Přihlásit
        </LoadingButton>
      </FormGroup>
    </Form>
  </Panel>
  <Connect(ErrorInModal)
    title="Chyba při přihlášení!"
  />
</div>
`;
